View Issue Details

IDProjectCategoryView StatusLast Update
0033261CommunityOCCT:Data Exchangepublic2023-03-22 14:37
Reporterdpasukhi Assigned ToDenisOrlov  
PrioritylowSeverityminor 
Status newResolutionopen 
Target Version7.8.0 
Summary0033261: Data Exchange, Step Import - Empty shape after reading process
DescriptionCan't read shape from attached file.
Some other application can read. NX Step analyzer can't read it and do not throw any errors.
Steps To Reproducepload ALL
ReadStep D Printer_Model_8909.stp
XShow D
TagsNo tags attached.
Test case number

Attached Files

  • Printer_Model_8909.zip (822,153 bytes)

Relationships

has duplicate 0033262 closedbugmaster Data Exchange, Step Import - Empty shape after reading process 

Activities

dpasukhi

2022-12-08 18:29

developer   ~0112547

dpasukhi

2022-12-08 18:30

developer   ~0112549

Printer_Model_8909.zip (822,153 bytes)

git

2023-02-07 17:27

administrator   ~0113092

Branch CR33261 has been created by DenisOrlov.

SHA-1: 8dd3fbe660e59f861dc285c3c6d29a8358ffed37


Detailed log of new commits:

Author: dorlov
Date: Tue Feb 7 14:27:10 2023 +0000

    0033261: Data Exchange, Step Import - Empty shape after reading process
    
    Added a check for ShapeRepresentationRelationship in Transfer of MappedItem method,
    in order to support link of components according to ISO 10303-203-2003,
    now it's for test purposes only.

dpasukhi

2023-02-14 18:21

developer   ~0113137

Dear @DenisOrlov

There a lot problems with names, please do not forget to use new code style.

Recommented to hide iterator variable to the loop body. Move { to new line.
+      for (subs1.Start(); subs1.More(); subs1.Next()) {

I think you can use STANDRAT_TYPE directly w/o variable
+      Handle(Standard_Type) tSRR = STANDARD_TYPE(StepRepr_ShapeRepresentationRelationship);

Returning value is not recommented, because you have some code to transform after(below)
+      else if (Cund.NbChildren() > 1)
+      {
+        shbinder = new TransferBRep_ShapeBinder(Cund);
+        TP->Bind(mapit, shbinder);
+        return shbinder;
+      }

I think there can be a few problems with ignoring own shape. We can read only supplemental geometry and forgor about own shape.
+    if (shbinder.IsNull())
+      binder = TransferEntity( maprep, TP, isBound, Standard_False, PS.Next() );

I think that we need to move this code to the TransferEntity. or special new function. But it looks very strange. (and repeated)
I think we need to analyze a stack of calls and handle this case before.
-  if (binder.IsNull())    binder = TransferEntity(maprep,TP,isBound, Standard_False, theProgress);
-  shbinder = Handle(TransferBRep_ShapeBinder)::DownCast(binder);
+  if (binder.IsNull())
+  {
+    // translate possible shapes related by SRRs, which corresponds to
+    // way of writing hybrid models in AP203 since 1998, and AP209
+    // Note that both AP203 and AP209 allow main representation to be non-empty
+    Standard_Integer readSRR = Interface_Static::IVal("read.step.shape.relationship");
+    Standard_Integer readConstructiveGeomRR = Interface_Static::IVal("read.step.constructivegeom.relationship");
+    Message_ProgressScope PS(theProgress, "Part", 2);

git

2023-03-16 17:01

administrator   ~0113286

Branch CR33261 has been updated forcibly by DenisOrlov.

SHA-1: 879d668f818c0de782dd546f68b6d4a8602d6400

git

2023-03-16 17:10

administrator   ~0113287

Branch CR33261 has been updated forcibly by DenisOrlov.

SHA-1: d70c9ed6367d755201e64906d999bfa1d30a26d6

git

2023-03-21 21:14

administrator   ~0113308

Branch CR33261 has been updated forcibly by DenisOrlov.

SHA-1: 786ace8b79f41c53a47543eb5da3625fad510331

git

2023-03-22 14:37

administrator   ~0113313

Branch CR33261 has been updated forcibly by DenisOrlov.

SHA-1: 01a2c4ebc7a01d10c267eb2afaddc2fed9ac6248

Issue History

Date Modified Username Field Change
2022-12-08 18:28 dpasukhi New Issue
2022-12-08 18:28 dpasukhi Assigned To => gka
2022-12-08 18:29 dpasukhi Note Added: 0112547
2022-12-08 18:30 dpasukhi Note Added: 0112549
2022-12-08 18:30 dpasukhi File Added: Printer_Model_8909.zip
2022-12-08 18:30 dpasukhi Priority normal => low
2022-12-08 18:31 dpasukhi Relationship added duplicate of 0033262
2023-01-17 01:09 vglukhik Relationship replaced has duplicate 0033262
2023-01-25 14:18 ika Assigned To gka => DenisOrlov
2023-02-07 17:27 git Note Added: 0113092
2023-02-14 18:21 dpasukhi Note Added: 0113137
2023-03-16 17:01 git Note Added: 0113286
2023-03-16 17:10 git Note Added: 0113287
2023-03-21 21:14 git Note Added: 0113308
2023-03-22 14:37 git Note Added: 0113313