0033261: Data Exchange, Step Import - Empty shape after reading process

Added a transfer for ShapeRepresentationRelationship in Transfer of MappedItem method,
in order to support link of components according to ISO 10303-203-2003.